--- a/src/Components/Subscriptions/Payment.css
+++ b/src/Components/Subscriptions/Payment.css
@@ -19,20 +19,24 @@
 }
 
 /* Style for form groups */
-.form-group {
-  margin-bottom: 15px;
+.form-group1 {
+  margin-bottom: 1rem; /* Space between fields */
+  display: flex;
+  flex-direction: column;
 }
 
 /* Labels for the inputs */
-.form-group label {
+.form-group1 label {
   display: block;
   font-size: 14px;
   margin-bottom: 5px;
   color: #333;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
 /* Inputs for the form */
-.form-group input {
+.form-group1 input {
   width: 100%;
   padding: 8px;
   font-size: 14px;
@@ -75,3 +79,10 @@
 /* .btn:hover {
   opacity: 0.9;
 } */
+
+.error-message {
+  color: red;
+  font-size: 0.85rem;
+  margin-top: 0.25rem;
+  display: block;
+}
