--- a/src/Screens/AllServices/AllServices.css
+++ b/src/Screens/AllServices/AllServices.css
@@ -1,6 +1,6 @@
-
 /* General Reset */
-body, html {
+body,
+html {
   margin: 0;
   padding-left: 0px;
   font-family: 'Arial', sans-serif;
@@ -59,7 +59,8 @@ body, html {
   background-color: #357abd;
 }
 
-.icon, .user-icon {
+.icon,
+.user-icon {
   font-size: 20px;
   color: #666;
   cursor: pointer;
@@ -75,7 +76,8 @@ body, html {
   padding: 30px;
   padding-top: 20px;
   border-radius: 10px;
-  /* margin-top: 30px; */
+  margin-top: 30px;
+  margin-left: 10px;
 }
 
 .services-title {
