changes in frontend

--- a/src/Components/Subscriptions/Free_trail_sub.css
+++ b/src/Components/Subscriptions/Free_trail_sub.css
@@ -32,7 +32,6 @@
   /* Subscriptions Table Styling */
   .subscriptions-container {
     font-family: Arial, sans-serif;
-    background-color: #ffffff;
     padding: 20px;
     border-radius: 8px;
     height: 100vh;
@@ -67,9 +66,9 @@
     font-weight: bold;
   }
   
-  .subscriptions-table tr:hover {
+  /* .subscriptions-table tr:hover {
     background-color: #f1f1f1;
-  }
+  } */
   
   .subscription-type {
     color: #007bff;
@@ -162,6 +161,7 @@
     color: #6f42c1;
     text-align: justify;
     /* padding: 4px; */
+    margin-top:-17px;
   }
   
   .billing-info {
