--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -8,6 +8,7 @@
   top: 0;
   left: 0;
   z-index: 1000;
+  height:60px;
 }
 
 /* Application Name */
@@ -46,6 +47,7 @@
   border-radius: 8px;
   outline: none;
   transition: border-color 0.3s ease;
+  margin-top: 20px;
 }
 
 .search-input:focus {
@@ -59,6 +61,7 @@
   transform: translateY(-50%);
   color: #aaa;
   cursor: pointer;
+  margin-top: 10px;
 }
 
 /* Right Section */
