--- a/src/Components/Subscriptions/Payment.css
+++ b/src/Components/Subscriptions/Payment.css
@@ -1,4 +1,3 @@
-
 .payment-details-container {
   padding-left: 35px;
 }
@@ -20,7 +19,8 @@
 
 /* Style for form groups */
 .form-group1 {
-  margin-bottom: 1rem; /* Space between fields */
+  margin-bottom: 1rem;
+  /* Space between fields */
   display: flex;
   flex-direction: column;
 }
@@ -37,7 +37,7 @@
 
 /* Inputs for the form */
 .form-group1 input {
-  width: 100%;
+  width: 80%;
   padding: 8px;
   font-size: 14px;
   border: 1px solid #ccc;
@@ -61,7 +61,7 @@
   cursor: pointer;
 }
 
-.back{
+.back {
   width: 200px;
   height: 35px;
   border-radius: 5px;
