--- a/src/Screens/AllServices/AllServices.css
+++ b/src/Screens/AllServices/AllServices.css
@@ -73,11 +73,11 @@ html {
 
 /* Services Section */
 .services-section {
-  padding: 30px;
-  padding-top: 20px;
-  border-radius: 10px;
-  margin-top: 30px;
-  margin-left: 10px;
+  padding: 10px;
+    /* padding-top: 20px; */
+    border-radius: 10px;
+    margin-top: 12px;
+    margin-left: 25px;
 }
 
 .services-title {
@@ -100,6 +100,7 @@ html {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
+  margin-left: 13px;
 }
 
 /* Service Category Card */
