--- a/src/Screens/Organization/Organization.css
+++ b/src/Screens/Organization/Organization.css
@@ -8,7 +8,7 @@
  
 .main-container {
   margin-left: 70px;
-  margin-top: 75px;
+  margin-top: 68px;
 }
  
 .header {
@@ -33,7 +33,7 @@
 .search-bar {
   display: flex;
   align-items: center;
-  background: #f0f0f0;
+  /* background: #f0f0f0; */
   border-radius: 8px;
   padding: 5px 10px;
   gap: 5px;
