--- a/src/Screens/Projects/CreateProject/CreateProject.css
+++ b/src/Screens/Projects/CreateProject/CreateProject.css
@@ -89,10 +89,11 @@
 h2 {
   font-size: 24px;
   margin-bottom: 20px;
+  font-weight: 600;
 }
  
 .input-group {
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
  
 .input-group label {
@@ -109,9 +110,11 @@ h2 {
   border: 1px solid #ddd;
 }
  
-.button-group {
+.button-group1 {
   display: flex;
-  justify-content: left;
+    /* justify-content: left; */
+    gap: 95px;
+    margin-top: 35px;
 }
  
 .cancel-button,
