--- a/src/Components/Subscriptions/Payment.css
+++ b/src/Components/Subscriptions/Payment.css
@@ -9,6 +9,11 @@
   border-radius: 8px;
 }
 
+.pay{
+  margin-left: 20px;
+  margin-top: 46px;
+}
+
 /* Title of the form */
 .form-title {
   font-size: 1.3rem;
@@ -18,15 +23,16 @@
 }
 
 /* Style for form groups */
-.form-group1 {
+.form-group2 {
   margin-bottom: 1rem;
   /* Space between fields */
   display: flex;
   flex-direction: column;
+  margin-left: 20px;
 }
 
 /* Labels for the inputs */
-.form-group1 label {
+.form-group2 label {
   display: block;
   font-size: 14px;
   margin-bottom: 5px;
@@ -36,8 +42,8 @@
 }
 
 /* Inputs for the form */
-.form-group1 input {
-  width: 80%;
+.form-group2 input {
+  width: 37vw;
   padding: 8px;
   font-size: 14px;
   border: 1px solid #ccc;
@@ -62,7 +68,7 @@
 }
 
 .back {
-  width: 200px;
+  width: 110px;
   height: 35px;
   border-radius: 5px;
   border: 2px solid black;
@@ -71,9 +77,17 @@
 .next {
   background-color: black;
   color: white;
-  width: 200px;
+  width: 110px;
   height: 35px;
   border-radius: 5px;
+  margin-left: 100px;
+}
+
+.button-group2{
+  margin-left: 20px;
+  margin-top: 35px;
+  display:flex;
+  gap:90px;
 }
 
 /* .btn:hover {
