--- a/src/Components/Subscriptions/PaymentMethodForm.css
+++ b/src/Components/Subscriptions/PaymentMethodForm.css
@@ -1,9 +1,13 @@
 .payment-method-container {
     width: 400px;
     font-family: Arial, sans-serif;
-    padding: 20px;
+    /* padding: 20px;
     border-radius: 8px;
-    margin-top: 10px;
+    margin-top: 10px; */
+  }
+
+  .pay1{
+    margin-top: -17px;
   }
   
   h2 {
