--- a/src/Screens/Projects/Project.css
+++ b/src/Screens/Projects/Project.css
@@ -95,7 +95,7 @@
     padding-bottom: 15px;
   }
    
-  .button {
+  .button3 {
     /* padding: 0;   */
     font-size:smaller;
     font-weight: 500;
@@ -104,11 +104,12 @@
     background: none; /* Removes background */
     cursor: pointer;
     text-align: left;
+    width: 13%;
   }
    
-  .button:hover {
-    text-decoration: underline; /* Adds an underline on hover for a subtle effect */
-  }
+  /* .button:hover {
+    text-decoration: underline; 
+  } */
    
   /* Table Section */
    
@@ -224,7 +225,7 @@
   }
    
    
-  .button:disabled {
+  .button3:disabled {
     /* background-color: #ccc; Light gray background */
     color: #666; /* Dark gray text */
     cursor: not-allowed; /* Not allowed cursor */
