--- a/src/Screens/AllServices/IntegrationService/HubIngest/HubIngest.css
+++ b/src/Screens/AllServices/IntegrationService/HubIngest/HubIngest.css
@@ -24,7 +24,7 @@
   padding: 8px 12px;
   border: none;
  
-  background-color: white;
+  /* background-color: white; */
   cursor: pointer;
   margin-top: 10px;
 }
