--- a/src/Components/ServiceMenu/ServiceMenu.css
+++ b/src/Components/ServiceMenu/ServiceMenu.css
@@ -1,7 +1,9 @@
 .service-menu {
   width: 100%;
-  /* padding: 20px; */
-  box-sizing: border-box;
+    /* padding: 20px; */
+    margin-top: -8px;
+    margin-left: 37px;
+    box-sizing: border-box;
 }
 
 .service-title {
