--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -126,7 +126,7 @@
   position: absolute;
   top: 60px;
   right: 20px;
-  width: 300px;
+  width: 335px;
   background-color: white;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -243,4 +243,136 @@
 
 .remove-account-button:hover {
   color: #ff4d4d; /* Change color on hover */
+}
+
+
+.popup-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-card {
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  width: 398px;
+}
+
+.popup-card h3 {
+  margin-bottom: 15px;
+}
+
+.account-checkbox {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.account-checkbox input {
+  margin-right: 10px;
+}
+
+.popup-actions {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.popup-actions button {
+  margin-left: 10px;
+  padding: 5px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.popup-actions button:first-child {
+  background: #ccc;
+}
+
+.popup-actions button:last-child {
+  background: #ff4d4d;
+  color: white;
+}
+
+
+
+.red-button {
+ 
+  color: red;
+
+  cursor: pointer;
+}
+
+.red-button:hover {
+  color: #ff4d4d;
+}
+
+
+.account-checkbox {
+  display: grid;
+  grid-template-columns: 30px auto; /* First column for checkbox, second for account name */
+  align-items: center;
+  width: 100%;
+}
+
+.red-button1 {
+ 
+  color: #0011FF;
+  font-weight: bolder;
+  padding-top: 10px;
+
+  cursor: pointer;
+}
+
+.red-button:hover {
+  color: #ff4d4d;
+}
+
+
+
+.current-account,
+.login-different-mail-button {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    padding-left: 1px;
+    gap: 10px; /* Adjust space between icon and text */
+    cursor: pointer;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+.current-account .icon-circle,
+.login-different-mail-button .icon-circle {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ddd;
+    border-radius: 50%;
+    font-size: 16px;
+}
+
+.current-account p {
+  margin: 0;
+    font-size: 14px;
+    color: #333;
+}
+.login-different-mail-button p {
+  color: #0011FF;
+  font-weight: bolder;
+
+
+  cursor: pointer;
 }
