forget password changes added

--- a/src/Components/ServiceMenu/ServiceMenu.css
+++ b/src/Components/ServiceMenu/ServiceMenu.css
@@ -12,7 +12,7 @@
   margin-bottom: 25px;
   text-align: left;
   font-weight: bold;
-  padding-left: 30px;
+  /* padding-left: 30px; */
 }
 
 .menu-container {
