--- a/src/Components/Subscriptions/Subscription_plans.css
+++ b/src/Components/Subscriptions/Subscription_plans.css
@@ -16,9 +16,10 @@
 
 .subs-plan-title {
   font-size: 1.4rem;
-  font-weight: bold;
-  margin-bottom: 2px;
-  padding-top: 50px;
+    font-weight: bold;
+    margin-bottom: 2px;
+    /* padding-top: 50px; */
+    margin-top: 50px;
 }
 
 .subtitle {
