--- a/src/Screens/Projects/CreateProject/CreateProject.css
+++ b/src/Screens/Projects/CreateProject/CreateProject.css
@@ -81,7 +81,7 @@
 .create-project-container {
   height: 100vh;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color:white;
   margin-left: 75px;
   margin-top: 55px;
 }
