--- a/src/Screens/Projects/Project.css
+++ b/src/Screens/Projects/Project.css
@@ -7,7 +7,7 @@
   .projects-page {
     font-family: Arial, sans-serif;
     color: #333;
-    background-color: #f9f9f9;
+    background-color: white;
     min-height: 80vh;
     margin-top: 55px;
   }
