--- a/src/Components/Datastore/Datastore.css
+++ b/src/Components/Datastore/Datastore.css
@@ -3,7 +3,7 @@
     padding-left: 70px;
     padding-top: 30px;
     font-family: Arial, sans-serif;
-    background-color: #f9f9f9;
+    background-color:white ;
     min-height: 100vh;
   }
   
