--- a/src/Screens/AllServices/AllServices.css
+++ b/src/Screens/AllServices/AllServices.css
@@ -11,7 +11,7 @@ html {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #f9f9f9;
+  background-color: white;
   padding-left: 35px;
 }
 
