--- a/src/Screens/CreateOrganization/CreateOrganization.css
+++ b/src/Screens/CreateOrganization/CreateOrganization.css
@@ -1,14 +1,9 @@
-/* Organization.css */
-/* .organization-container {
-  padding: 20px;
-  font-family: Arial, sans-serif;
-  color: #333; */
-
-/* } */
 
 .create-organization-container {
   margin-left: 75px;
   margin-top: 68px;
+  background-color: white;
+  
 }
 
 
@@ -21,13 +16,6 @@
   color: #666;
 }
 
-/* .search-input {
-    border: none;
-    outline: none;
-    background: transparent;
-    font-size: 14px;
-    width: 200px;
-  } */
 
 .upgrade-btn {
   background-color: #0066ff;
