--- a/src/Screens/Home/Home.css
+++ b/src/Screens/Home/Home.css
@@ -9,10 +9,11 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
-  width: 210vh;
+  width: 230vh;
   font-family: Arial, sans-serif;
-  /* background-color: #f9f9f9; */
+  background-color: white;
   padding: 50px;
+  position: fixed;
 }
 
 /* Header Section */
