--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -17,7 +17,7 @@
   padding-left: 15px;
 }
  
-.app-name {
+.app-name1 {
   font-size: 22px;
   font-weight: bold;
   margin: 0;
@@ -375,4 +375,48 @@
 
 
   cursor: pointer;
+}
+/* Search Dropdown */
+.dropdown-options {
+  position: absolute;
+  top: 45px; /* Adjust based on input height */
+  left: 0;
+  width: 100%;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  max-height: 200px;
+  overflow-y: auto;
+  z-index: 100;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 9px;
+}
+
+.dropdown-option {
+  padding: 10px 15px;
+  font-size: 14px;
+  color: #333;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+}
+
+.dropdown-option:hover {
+  background-color: #f0f0f0;
+}
+
+/* Add scrollbar styling for better UI */
+.dropdown-options::-webkit-scrollbar {
+  width: 6px;
+}
+
+.dropdown-options::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 4px;
+}
+
+.dropdown-options::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
 }
