--- a/src/Screens/SignIn/Signin.module.css
+++ b/src/Screens/SignIn/Signin.module.css
@@ -160,3 +160,17 @@
     justify-content: center;
   }
 }
+
+
+
+.passwordToggle {
+  background: white;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin-left: 0.5rem;
+  position: absolute;
+  right: 18px; /* Position the eye icon to the right */
+  margin-top: 13px;
+  border-radius: 244px
+}
