--- a/src/Components/PropertiesModal.css
+++ b/src/Components/PropertiesModal.css
@@ -11,7 +11,7 @@
     z-index: 1000;
   }
   
-  .modal-content {
+  .modal-content1 {
     background-color: white;
     padding: 20px;
     border-radius: 8px;
